<resources>
    <string name="app_name">expense-tracker</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="button">Button</string>
    <string name="submit">submit</string>
    <string name="todo">TODO</string>
    <string name="first_time_login">First Time Login?</string>
    <string name="expense">Expense</string>
    <string name="username">userName</string>
    <string name="enter_item">Enter Item</string>
    <string name="enter_price">Enter Price</string>
    <string name="store">Store</string>
    <string name="history">history</string>
    <string name="_history">History</string>
    <string name="textview">TextView</string>
    <string name="todon">TODO</string>
    <string name="heading">HEADING</string>
    <string name="totalPrice">TextView</string>
    <string name="clear_all">Clear All</string>
</resources>