<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111827"
    tools:context=".MainActivity1">

    <TextView
        android:id="@+id/heading2"
        android:layout_width="191dp"
        android:layout_height="61dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/expense"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:fontFamily="@font/bebas"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/expense_item"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_item"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/heading2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/heading2"
        app:layout_constraintTop_toBottomOf="@+id/heading2" />

    <EditText
        android:id="@+id/expense_price"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_price"
        android:inputType="number|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/heading2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/heading2"
        app:layout_constraintTop_toBottomOf="@+id/expense_item" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="@font/ubuntu"
        android:onClick="storeExpense"
        android:text="@string/store"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#9333ea"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="@+id/expense_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/expense_price"
        app:layout_constraintTop_toBottomOf="@+id/expense_price"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="10dip"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="@font/ubuntu"
        android:onClick="getExpenseHistory"
        android:text="@string/_history"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#9333ea"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="@+id/expense_price"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/expense_price"
        app:layout_constraintTop_toBottomOf="@+id/expense_price"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="10dip"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>