<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111827"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:autoText="true"
        android:cursorVisible="true"
        android:fontFamily="@font/bebas"
        android:text="@string/expense_tracker"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#C6C3C3"
        android:textColorHint="#847F7F"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="Deprecated,TextViewEdits,TextSizeCheck" />

    <EditText
        android:id="@+id/uid"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_user_name"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#d1d5db"
        android:textColorLink="#a855f7"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#d1d5db"
        android:textColorLink="#a855f7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/uid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/uid"
        app:layout_constraintTop_toBottomOf="@+id/uid" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#9333ea"
        android:fontFamily="@font/ubuntu"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="getData"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#9333ea"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="10dip"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="135dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/first_time_login"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:buttonTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.047" />

</androidx.constraintlayout.widget.ConstraintLayout>